Family-feedback: RSVP UI made the radio button groups have very small text for mobile, disabled button if undecided

--- a/src/Components/RSVP/RSVP.css
+++ b/src/Components/RSVP/RSVP.css
@@ -127,7 +127,8 @@
 
 @media(max-width: 768px) {
     .rsvpFormButtonText {
-        display: none;
+        /* display: none; */
+        font-size: 8px !important;
     }
 }
 
